<resources>
    <!--region PLACEHOLDERS -->
    <string name="placeholder_one_word">Placeholder</string>
    <string name="placeholder_medium">Medium length placeholder, I think this should be long enough</string>
    <string name="placeholder_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="placeholder_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="placeholder_1_digit">3</string>
    <string name="placeholder_2_digits">30</string>
    <string name="placeholder_3_digits">300</string>
    <string name="placeholder_4_digits">3000</string>
    <!--endregion -->

    <!--region GLOBAL USAGE -->
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="insurance">Insurance</string>
    <string name="gp">GP</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="Send">Send</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="welcome">Welcome</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <!--endregion -->

    <!--region PAGE TITLES-->
    <string name="landing_page">Home</string>
    <string name="contact_page">Contact</string>
    <string name="ai_predict">Health AI Chat</string>
    <string name="rating_page">Reviews</string>
    <string name="fitness_page">Fitness</string>
    <string name="body_overview">Body Overview</string>
    <string name="fitness_plan_page">Fitness Plans</string>
    <string name="user_details_page">User Details</string>
    <string name="user_profile_page">User Profile</string>
    <string name="login_page">Login</string>
    <string name="register_page">Register</string>
    <string name="subscription_page">Subscription</string>


    <!--endregion-->

    <!--region LOGIN PAGE -->
    <string name="login">Login</string>
    <string name="not_member">Not a Member?</string>
    <!--endregion -->

    <!--region REGISTER  PAGE -->
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name_hint">John</string>
    <string name="last_name_hint">Doe</string>
    <string name="email_hint">john.doe@test.com</string>
    <string name="already_member">Already a Member?</string>
    <!--endregion -->

    <!--region LANDING PAGE -->
    <string name="quick_access">Quick Access</string>
    <string name="app_name">HealthAIApp</string>
    <string name="landing_greeting">Welcome, %1$s</string>
    <string name="ai_predict_button">AI Predict</string>
    <string name="user_profile_button">User Page</string>
    <string name="fitness_button">Fitness</string>
    <string name="rating_quick_access_button">Leave a rating!</string>
    <string name="health_ai_quick_access_button">Health AI</string>
    <string name="health_ai_subscription_quick_access_button">AI Subscription</string>
    <string name="contact_quick_access_button">Contact</string>
    <!--endregion -->

    <!--region SUBSCRIPTION PAGE -->
    <string name="subscription_page_header">Health AI&#10;Subscription</string>
    <string name="subscribe">Proceed To Payment</string>
    <string name="subscribe_benefits">Gain Access to our Chat AI!</string>
    <string name="gpt_powered">ChatGPT Powered</string>
    <string name="subscribe_today">Subscribe Today</string>
    <string name="health_oriented">Health Oriented</string>
    <!--endregion -->

    <!--region RATING PAGE -->
    <string name="rating_page_header">Rating &amp; Reviews</string>
    <string name="leave_a_rating">Leave A Rating</string>
    <string name="existing_ratings">Existing Ratings</string>
    <!--endregion -->

    <!--region LEAVE RATING PAGE -->
    <string name="leave_rating_large_textbox">Tell us about your thoughts and experience!</string>
    <string name="leave_rating_small_textbox">Review Title/Summary</string>
    <string name="invalid_review">Error, invalid review</string>
    <string name="invalid_review_explanation">Ensure all fields are filled in</string>
    <!--endregion -->

    <!--region RATING SUCCESS PAGE -->
    <string name="review_received">Feedback Received!</string>
    <string name="feedback_appreciated">Thanks for your feedback! We have received it and we will use it to make our services better! Thank you for using the Health AI App.</string>
    <string name="return_to_home">Return to Home Page</string>
    <!--endregion -->

    <!--region CONTACT PAGE -->
    <string name="contact_page_title">Contact&#10;Professionals</string>
    <string name="who_to_contact">Who are you contacting?</string>
    <string name="why_need_help">What do you need help with?</string>
    <string name="provide_details">Provide some details</string>
    <string name="write_email">Write an email</string>
    <string name="call">Call</string>
    <!--endregion -->

    <!--region FITNESS PAGE -->
    <string name="nutritionPage">Nutrition Tips</string>
    <string name="fitnessOverview">Body Overview</string>
    <string name="bmi">BMI</string>
    <string name="bmr">BMR</string>
    <string name="recommended_caloric_intake_overweight">If your BMI is above normal, you need to lose weight to stay healthy. Below is information on losing weight. \n \n
In order to lose weight, you must consume fewer calories than your BMR is at. More exercise will increase the number of calories you burn, but make sure that a good diet is your main plan of action for weight loss. We can offer you some tips below. \n \n
- Eat fewer calorie-dense foods; this will help you reduce cravings. \n
- Eating more filling foods such as vegetables or proteins, as these foods will make you feel full longer and not give in to temptations to snack. \n
- Remember to eat something you like, as it is important you stick to a diet you will not be discouraged by. With the right nutrients and preparation, you can still eat your favorite dishes! \n \n
Remember to read the food labels and prepare food accordingly, and keep in mind that 1 kilogram of body fat is around 7700 calories. Always make sure you stay within the daily recommended amounts of nutrients such as salt, fat, calcium, vitamins, or sugar, and make sure your plan accommodates your liking.</string>
    <string name="recommended_caloric_intake_underweight">If your BMI is below normal, you need to gain weight to stay healthy. Below is information on gaining weight. \n \n
        In order to gain weight, you must consume more calories than your BMR is at. Keep in mind this formula may not be accurate to you, and you may need to consume some more.We can offer you some tips below.\n \n
        - Eat more calorie dense foods, this will help you eat smaller food sizes but gain more calories. \n
        - Eating less filling foods like vegetables or proteins, as these foods will make you feel full longer. \n
        - Allow yourself some snacking, but make sure to not overdo it. These can still be unhealthy since they contain nutrients you should not eat too much of. \n
        - Remember to eat something you like, as it is important you stick to a diet you will not be discouraged by. With the right nutrients and preparation, you can still eat your favourite dishes! \n \n
        Remember to read the food labels and prepare food accordingly, and keep in mind that even though 1 kilogram of body-fat is around 7700 calories, you should not aim for that much. For most people, 3000 is a good amount.Rapid weight gain is not a positive thing, so make sure to make it a steady growth. \n
        Always make sure you stay within the daily recommended amounts of nutrients such as salt, fat, calcium, vitamins or sugar, and make sure your plan accommodates your liking. Additionally, if you feel like you still don\'t look fine, you may be suffering from body dysmorphia. Please, contact a professional in this regard. </string>
    <string name="recommended_caloric_intake_normal">Your BMI is normal! You can continue to eat as much as you do right now, but make sure to keep in mind for your daily recommended amounts of nutrients such as salt, fat,calcium, vitamins or sugar. It is important that you not only stay in a healthy weight range, but also consume the correct nutrients.  </string>

    <!--endregion -->

    <!--region NUTRITION PAGE-->

    <string name="nutrition">Nutrition</string>
    <string name="fitness_begins_diet">Fitness begins with a good diet!</string>
    <string name="daily_intake">Daily Recommended Intake</string>
    <string name="daily_intake_explained">The Daily Recommended Intake is the value of a nutrient which should be enough for the average person to stay healthy. It\'s recommended to not cross over these values in sizeable and prolonged amounts, as it could lead to health issues. For example, excess of salt is best avoided.\n
    The values are as follows:</string>
    <string name="protein_intake">Some nutrients however, you might want a lot of. For example, to build muscle, you are recommended to consume 1.2–1.7 grams of protein per kilogram of bodyweight per day.</string>
    <string name="build_plan">Build your diet and nutrient plan around your needs. Ensure to stay above/below/within your caloric needs. Make sure to get plenty of nutrients and vitamins, but not to overdo it on nutrients like sugar or salt.</string>
    <!--endregion -->



    <!--region USER PAGE -->
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="gp_email">GP Email Address</string>
    <string name="insurance_email">Insurance Email Address</string>
    <string name="insurance_phone">Insurance Phone Number</string>
    <string name="insurance_name">Insurance Name</string>
    <string name="medical_history">Medical History</string>
    <string name="medications">Medications</string>
    <string name="health_ai_title">Your Health AI&#10;Analysis</string>
    <string name="user_name_header">%1$s</string>
    <string name="edit_user_details">Edit Your Details</string>
    <!--endregion -->

    <!--region HEALTH AI PAGE -->
    <string name="chatbot_title">Health AI Chatbot</string>
    <string name="type_a_message">Type a Message</string>
    <string name="disclaimer">The Health AI Chatbot is always developing to bring you the latest information. However, it is definitely recommended to seek advice from a medical professional if you feel something is wrong.</string>
    <string name="already_subscribed">You are subscribed! Go back?</string>
    <string name="loading_subscription_status">Loading Subscription Status</string>
    <!--endregion -->

</resources>