<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headingLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="horizontal"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/Heading"
            android:layout_width="176dp"
            android:layout_height="115dp"
            android:text="@string/placeholder_one_word" />

    </LinearLayout>


    <Button
        android:id="@+id/FitnessNavButton"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="304dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_style_1"
        android:text="@string/fitness_button"
        android:textColor="#000000"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/userProfileNavButton"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_style_1"
        android:text="@string/user_profile_button"
        android:textColor="#000000"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/AIPredictNavButton"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_style_1"
        android:text="@string/ai_predict_button"
        android:textColor="#000000"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/chatbot_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingLinearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatbotRecyclerView"
        android:layout_width="340dp"
        android:layout_height="320dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chatbotTextInput"
        android:layout_width="263dp"
        android:layout_height="59dp"
        app:layout_constraintStart_toStartOf="@+id/chatbotRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/chatbotRecyclerView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_a_message" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/chatbotSendButton"
        android:layout_width="76dp"
        android:layout_height="60dp"
        android:text="@string/Send"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/chatbotRecyclerView"
        app:layout_constraintStart_toEndOf="@+id/chatbotTextInput"
        app:layout_constraintTop_toBottomOf="@+id/chatbotRecyclerView" />

    <ScrollView
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/chatbotRecyclerView"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/chatbotRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/chatbotTextInput">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/disclaimer"
                android:textColor="#00aaaa"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="584dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>